# bottle-cors

./: README.md  bottle_cors.py  pyproject.toml
src/bottle_cors/: __init__.py  bottle_cors.py
tests/: test_bottle_cors.py
